--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "@types/ws": "^8.18.0",
+    "dotenv": "^16.4.7",
+    "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
