--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar": "^4.0.1",
     "zod": "^3.24.2"
