--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
+    "@types/socket.io": "^3.0.1",
     "@types/ws": "^8.18.0",
     "dotenv": "^16.4.7",
     "nodemon": "^3.1.9",
