--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "ts-node index.ts",
-    "serve": "nodemon --ext ts --exec ts-node index.ts",
+    "serve": "nodemon --exec node --loader ts-node/esm index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
