--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,8 +8,9 @@
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
   },
-  "include": ["./**/*"],
+  "include": ["**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
